# LocalReads

./: .gitignore  AUTO_UPDATE_SETUP.md  CHANGELOG.md  README.md  UPDATE_IMPLEMENTATION.md  index.html  package-lock.json  package.json  responsive-test.html  responsive-test.tsx  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: check-versions.js  copy-assets.js  pre-commit.js  release.js  update-version.js
src/: App.tsx  main.tsx  types-tauri.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Authors.tsx  Dashboard.tsx  EditDialog.tsx  Highlights.tsx  KeyboardShortcutsHelp.tsx  Library.tsx  NextUp.tsx  ReReads.tsx  Series.tsx  Settings.tsx  UpdateNotification.tsx  ui.tsx
src/data/: sampleData.ts
src/db/: client.ts  repo.ts  schema.sql
src/hooks/: useKeyboardShortcuts.ts  useTheme.ts
src/state/: storage.ts
src/styles/: index.css
src/utils/: csv.ts  date.ts  mergeByTitleAuthor.ts  updater.ts
