[package]
name = "localreads-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^1" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^1", features = ["dialog-open", "fs-read-file", "fs-write-file", "fs-create-dir", "path-all"] }
# SQL plugin (SQLite)
tauri-plugin-sql = { version = "^0.5", features = ["sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]