[package]
name = "localreads-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-sql = { version = "^2.0.0", features = ["sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
