[package]
name = "localreads-tauri"
version = "0.6.14"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-sql = { version = "^2.0.0", features = ["sqlite"] }
tauri-plugin-dialog = { version = "^2.0.0" }
tauri-plugin-fs = { version = "^2.0.0" }
tauri-plugin-opener = { version = "^2.0.0" }
tauri-plugin-clipboard-manager = { version = "^2.0.0" }
tauri-plugin-updater = { version = "^2.0.0" }

[features]
default = []
